--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,3 +1,5 @@
 <% @cat_images.each do |cat_image| %>
   <%= image_tag(cat_image['url'], alt: "Random Cat", width: "300", height: "300") %>
 <% end %>
+
+<button id="reload-button">Reload</button>
